Fix remarks