@@ -13,8 +13,8 @@ import org.prebid.cache.repository.redis.RedisUtils;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
+import java.util.Collections;
 import java.util.Map;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Configuration
@@ -22,15 +22,16 @@ public class ModuleCompositeRepositoryConfiguration {
 
     @Bean
     ModuleCompositeRepository moduleCompositeRepository(ModuleCompositeRedisConfigurationProperties properties) {
-        final Map<String, ReactiveRepository<PayloadWrapper, String>> applicationToSource =
-                Optional.ofNullable(properties.getRedis())
-                        .map(redis ->
-                                redis.entrySet()
-                                        .stream()
-                                        .collect(Collectors.toMap(
-                                                Map.Entry::getKey,
-                                                entry -> getReactiveRepository(entry.getValue()))))
-                        .orElse(Map.of());
+        final Map<String, RedisConfigurationProperties> redisConfig = properties.getRedis();
+
+        if (redisConfig == null || redisConfig.isEmpty()) {
+            return new ModuleCompositeRepository(Collections.emptyMap());
+        }
+
+        final Map<String, ReactiveRepository<PayloadWrapper, String>> applicationToSource = redisConfig.entrySet()
+                .stream()
+                .map(entry -> Map.entry(entry.getKey(), getReactiveRepository(entry.getValue())))
+                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
 
         return new ModuleCompositeRepository(applicationToSource);
     }
